protecting privateKey